--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.1.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
