--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,8 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://127.0.0.1:5050/",
   "type": "module",
-  "proxy": "http://127.0.0.1:5050",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
