--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,15 @@
     "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.3.4",
-    "react-scrollable-feed": "^1.3.2"
+    "react-scrollable-feed": "^1.3.2",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
