--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,7 @@
 NODE_ENV=dev
-PORT=5050
+PORT=5000
 MONGO_CONNECTION_URI=
-JWT_SECRET=
+JWT_SECRET=your_jwt_secret
+
+# Database
+NEON_CONNECTION_STRING=postgresql://username:password@hostname/database
