--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/button": "^2.1.0",
+    "@chakra-ui/form-control": "^2.2.0",
     "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/input": "^2.1.2",
+    "@chakra-ui/layout": "^2.3.1",
     "@chakra-ui/react": "^2.6.1",
+    "@chakra-ui/spinner": "^2.1.0",
+    "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
